Hopefully Fix Service Module Plume issue Add Lunar Rated Heat Shield Other Small Minor Fixes

--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
@@ -153,13 +153,13 @@ PART
 		throttleLocked = True
 		useEngineResponseTime = False
 		engineAccelerationSpeed = 0
-		fxOffset = 0, 0, 0.35
 	}
 
 	MODULE
 	{
 		name = ModuleEngineConfigs
 		type = ModuleEngines
+		modded = false
 		configuration = SLE-M
 		CONFIG
 		{
@@ -167,14 +167,6 @@ PART
 			minThrust = 30
 			maxThrust = 30
 			heatProduction = 100
-			ullage = False
-			pressureFed = False
-			ignitions = 1
-			IGNITOR_RESOURCE
-			{
-				name = ElectricCharge
-				amount = 0.6
-			}
 			PROPELLANT
 			{
 				name = HTPB
@@ -186,13 +178,23 @@ PART
 				key = 0 250
 				key = 1 230
 			}
+
+			ullage = False
+			pressureFed = False
+			ignitions = 1
+
+			IGNITOR_RESOURCE
+			{
+				name = ElectricCharge
+				amount = 0.6
+			}
 		}
 	}
 
 	MODULE
 	{
 		name = ModuleSurfaceFX
-		thrustProviderModuleIndex = 0
+		thrustProviderModuleIndex = 4
 		fxMax = 0.75
 		maxDistance = 50
 		falloff = 1.8
@@ -207,13 +209,11 @@ PART
 		thrusterPower = 0.147
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = rcs
-
 		PROPELLANT
 		{
 			name = HTP
 			ratio = 1.0
 		}
-
 		atmosphereCurve
 		{
 			key = 0 280
@@ -395,7 +395,6 @@ PART
 	@MODULE[ModuleEngines*]
 	{
 		%powerEffectName = Solid-Sepmotor
-		!runningEffectName = DELETE
 	}
 
 	@MODULE[ModuleEngineConfigs]
