--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSHeatshield.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSHeatshield.cfg
@@ -36,7 +36,7 @@ PART
 	category = Thermal
 	subcategory = 0
 
-	title = Soyuz TM/TMA/MS Heatshield
+	title = Soyuz TM/TMA/MS LEO Heatshield
 	manufacturer = RKK Energia
 	description = The heat shield for the Soyuz TM/TMA/MS Descent Module. It is jettisoned after main parachute deployment.
 	tags = soyuz ms, DECQ
@@ -81,8 +81,16 @@ PART
 	}
 }
 
++PART[ROC-SoyuzMSHeatshield]
+{
+	@name = ROC-SoyuzMSHeatshield2
+	@title = Soyuz TM/TMA/MS Lunar Heatshield
+
+	@heatShieldTag = Lunar
+}
+
 // Specific adjustments after default setup
-@PART[ROC-SoyuzMSHeatshield]:AFTER[RealismOverhaul_HeatShield]
+@PART[ROC-SoyuzMSHeatshield|ROC-SoyuzMSHeatshield2]:AFTER[RealismOverhaul_HeatShield]
 {
 	@MODULE[ModuleAblator]
 	{
