--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
@@ -164,8 +164,6 @@ PART
 		thrustVectorTransformName = thrustTransform
 		EngineType = LiquidFuel
 		engineID = SKD
-		runningEffectName = running1
-		fxOffset = 0, 0, 0.8
 	}
 
 	MODULE
@@ -192,7 +190,7 @@ PART
 		name = ModuleGimbal
 		gimbalTransform = thrustTransform
 		gimbalRange = 5.0
-		useGimbalResponseSpeec = True
+		useGimbalResponseSpeed = True
 		gimbalResponseSpeed = 16
 	}
 
@@ -200,7 +198,6 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = Default Take
-		isOneShot = True
 		startEventGUIName = Open SKD Cap
 		endEventGUIName = Close SKD Cap
 		actionGUIName = Toggle SKD Cap
@@ -226,14 +223,31 @@ PART
 	{
 		name = ModuleEngineConfigs
 		type = ModuleEngines
+		modded = false
 		configuration = S5.80
-
 		CONFIG
 		{
 			name = S5.80
 			minThrust = 2.95
 			maxThrust = 2.95
 			heatProduction = 1
+			PROPELLANT
+			{
+				name = UDMH
+				ratio = 0.4977
+				DrawGauge = True
+			}
+			PROPELLANT
+			{
+				name = NTO
+				ratio = 0.5023
+			}
+			atmosphereCurve
+			{
+				key = 0 302
+				key = 1 100
+			}
+
 			ullage = True
 			pressureFed = True
 			ignitions = 30
@@ -242,26 +256,6 @@ PART
 			{
 				name = ElectricCharge
 				amount = 0.1
-			}
-
-			PROPELLANT
-			{
-				name = UDMH
-				ratio = 0.4977
-				DrawGauge = True
-			}
-
-			PROPELLANT
-			{
-				name = NTO
-				ratio = 0.5023
-				DrawGauge = False
-			}
-
-			atmosphereCurve
-			{
-				key = 0 302
-				key = 1 100
 			}
 		}
 	}
@@ -274,19 +268,16 @@ PART
 		thrusterPower = 0.026
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = control1
-
 		PROPELLANT
 		{
 			name = UDMH
 			ratio = 0.4977
 		}
-
 		PROPELLANT
 		{
 			name = NTO
 			ratio = 0.5023
 		}
-
 		atmosphereCurve
 		{
 			key = 0 285
@@ -303,19 +294,16 @@ PART
 		thrusterPower = 0.13
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = control
-
 		PROPELLANT
 		{
 			name = UDMH
 			ratio = 0.4977
 		}
-
 		PROPELLANT
 		{
 			name = NTO
 			ratio = 0.5023
 		}
-
 		atmosphereCurve
 		{
 			key = 0 291
@@ -424,7 +412,6 @@ PART
 	@MODULE[ModuleEngines*]
 	{
 		%powerEffectName = Hypergolic-OMS-White
-		!runningEffectName = DELETE
 	}
 
 	@MODULE[ModuleEngineConfigs]
