Add WaterFall Plumes

--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL_Plume_Support.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL_Plume_Support.cfg
@@ -59,7 +59,7 @@
 
 		TEMPLATE
 		{
-			templateName = waterfall-rcs-jet-1
+			templateName = rowaterfall-rcs-cold-gas-1
 			overrideParentTransform = rcs1
 			position = 0,-0.125,0
 			rotation = 0,0,180
@@ -84,7 +84,7 @@
 		}
 		TEMPLATE
 		{
-			templateName = waterfall-rcs-jet-1
+			templateName = rowaterfall-rcs-cold-gas-1
 			overrideParentTransform = rcs2
 			position = 0,-0.125,0
 			rotation = 0,0,180
