Add WaterFall Plumes

--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/Dragon_Plume_Support.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/Dragon_Plume_Support.cfg
@@ -59,7 +59,7 @@
 
 		TEMPLATE
 		{
-			templateName = waterfall-rcs-jet-1
+			templateName = rowaterfall-rcs-cold-gas-1
 			overrideParentTransform = rcsThrustMain
 			position = 0,0,0
 			rotation = 0,0,180
@@ -84,7 +84,7 @@
 		}
 		TEMPLATE
 		{
-			templateName = waterfall-rcs-jet-1
+			templateName = rowaterfall-rcs-cold-gas-1
 			overrideParentTransform = rcsThrust
 			position = 0,0,0
 			rotation = 0,0,180
