Update RCS thrusters to use new plumes.

--- a/GameData/ROCapsules/PartConfigs/Apollo/Waterfall_Support_Apollo.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/Waterfall_Support_Apollo.cfg
@@ -2,7 +2,7 @@
 {
     ROWaterfall
     {
-        template = waterfall-rcs-jet-1
+        template = rowaterfall-rcs-cold-gas-1
         audio = rcs-jet-1
         transform = RCSthruster
         position = 0,0.03,0
@@ -15,11 +15,11 @@
 {
     ROWaterfall
     {
-        template = waterfall-rcs-jet-1
+        template = rowaterfall-rcs-hypergolic-1
         audio = rcs-jet-1
         transform = RCSthruster
-        position = 0,0,0
-        rotation = 0,0,180
-        scale = 1,1,1
+        position = 0,0.05,0
+        rotation = 0, 0, 180
+        scale = 1.7, 1.7, 1.7
     }
 }
