--- a/GameData/ROCapsules/PartConfigs/Dynasoar/Waterfall_Support_Dynasoar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/Waterfall_Support_Dynasoar.cfg
@@ -2,7 +2,7 @@
 {
     ROWaterfall
     {
-        template = waterfall-rcs-jet-1
+        template = rowaterfall-rcs-cold-gas-1
         audio = rcs-jet-1
         transform = RCSTHRUSTER
         position = 0,0,0
@@ -40,10 +40,5 @@
         emissionMult = 0.5
         energy = 1.0
         speed = 1.0
-    }
-
-    @MODULE[ModuleEngines*]
-    {
-        %powerEffectName = Solid-Lower
     }
 }
