--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/Waterfall_Support_GeminiBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/Waterfall_Support_GeminiBDB.cfg
@@ -2,7 +2,7 @@
 {
     ROWaterfall
     {
-        template = waterfall-rcs-jet-1
+        template = rowaterfall-rcs-hypergolic-1
         audio = rcs-jet-1
         transform = rcsTransform
         position = 0,0,0
@@ -70,7 +70,7 @@
 {
     ROWaterfall
     {
-        template = waterfall-rcs-jet-1
+        template = rowaterfall-rcs-hypergolic-1
         audio = rcs-jet-1
         transform = rcsTransform
         position = 0,0,0
@@ -95,7 +95,7 @@
     ROWaterfall
     {
         moduleID = #$/name$-translate
-        template = waterfall-rcs-jet-1
+        template = rowaterfall-rcs-hypergolic-1
         audio = rcs-jet-1
         transform = rcsTransform
         position = 0,0,0
@@ -107,7 +107,7 @@
 {
     +MODULE[ModuleWaterfallFX]
     {
-        !__ro_waterfall = delete
+        !__rowaterfall = delete
         @moduleID = #$/name$-retro
         @CONTROLLER[rcs]
         {
@@ -115,7 +115,7 @@
         }
         @TEMPLATE
         {
-            !__ro_waterfall = delete
+            !__rowaterfall = delete
             @overrideParentTransform = retroTransform
         }
     }
