--- a/GameData/ROCapsules/PartConfigs/LEM/Waterfall_Support_LEM.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/Waterfall_Support_LEM.cfg
@@ -29,7 +29,7 @@
         }
         TEMPLATE
         {
-            templateName = waterfall-rcs-jet-1
+            templateName = rowaterfall-rcs-hypergolic-1
             overrideParentTransform = RCSthruster
             position = 0,0,0
             rotation = 0, 0, 180
