--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/Waterfall_Support_MercuryBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/Waterfall_Support_MercuryBDB.cfg
@@ -2,7 +2,7 @@
 {
     ROWaterfall
     {
-        template = waterfall-rcs-jet-1
+        template = rowaterfall-rcs-cold-gas-1
         audio = rcs-jet-1
         transform = rcsTransform
         position = 0,0,0
@@ -15,7 +15,7 @@
 {
     ROWaterfall
     {
-        template = waterfall-rcs-jet-1
+        template = rowaterfall-rcs-cold-gas-1
         audio = rcs-jet-1
         transform = rcsTransform
         position = 0,0,0
