--- a/GameData/ROCapsules/PartConfigs/Orion/Waterfall_Support_Orion.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/Waterfall_Support_Orion.cfg
@@ -2,7 +2,7 @@
 {
     ROWaterfall
     {
-        template = waterfall-rcs-jet-1
+        template = rowaterfall-rcs-hydrazine-1
         audio = rcs-jet-1
         transform = RCSthruster
         position = 0,-0.01,0
@@ -36,8 +36,7 @@
 {
     ROWaterfall
     {
-        template = waterfall-rcs-jet-1
-        audio = rcs-jet-1
+        autoConfig = rcs
         transform = RCSthruster
         position = 0,0,0
         rotation = 0, 0, 180
