--- a/GameData/ROCapsules/PartConfigs/Vostok/Waterfall_Support_Vostok.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/Waterfall_Support_Vostok.cfg
@@ -28,7 +28,7 @@
         }
         TEMPLATE
         {
-            templateName = waterfall-rcs-jet-1
+            templateName = rowaterfall-rcs-hypergolic-1
             overrideParentTransform = RCSthruster
             position = 0,-0.007,0
             rotation = 0, 0, 180
