--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/Waterfall_Support_ApolloETS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/Waterfall_Support_ApolloETS.cfg
@@ -2,7 +2,7 @@
 {
     ROWaterfall
     {
-        template = waterfall-rcs-jet-1
+        template = rowaterfall-rcs-cold-gas-1
         audio = rcs-jet-1
         transform = RCSthruster
         position = 0,0,0
