--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetro.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetro.cfg
@@ -63,8 +63,8 @@ PART
 		CONFIG
 		{
 			name = MercuryRetro
-			minThrust = 5.45 // 4.45kN x scaling factor to use curve.
-			maxThrust = 5.45
+			minThrust = 4.45
+			maxThrust = 4.45
 			heatProduction = 2
 
 			powerEffectName = Solid-Upper
@@ -77,45 +77,11 @@ PART
 			}
 			atmosphereCurve
 			{
-				key = 0 85
-				key = 1 107.04
+				key = 0 107.04
+				key = 1 85
 			}
 			chamberNominalTemp	 = 1400
 			maxEngineTemp = 1740
-			curveResource = PSPC
-			thrustCurve
-			{
-				key = 1.00000 0.66667  -5.20777	  0.00000
-				key = 0.98656 0.73333  -4.73446	 -4.73536
-				key = 0.97184 0.80000  -4.34000	 -4.34063
-				key = 0.95584 0.86667  -4.00621	 -4.00667
-				key = 0.93856 0.93333	0.31002	 -3.72043
-				key = 0.88528 0.91667	0.31566	  0.31566
-				key = 0.83296 0.90000  -0.57870	  0.32150
-				key = 0.77429 0.93333  -0.55803	 -0.55804
-				key = 0.71349 0.96667  -0.53879	 -0.53880
-				key = 0.65056 1.00000	0.00000	 -0.52084
-				key = 0.45856 1.00000	0.69445	  0.00000
-				key = 0.41136 0.96667	0.71839	  0.71839
-				key = 0.36576 0.93333	0.74405	  0.74404
-				key = 0.32176 0.90000	0.77161	  0.77160
-				key = 0.27936 0.86667	0.50080	  0.80128
-				key = 0.24640 0.85000	0.51062	  0.51062
-				key = 0.21408 0.83333	0.00000	  0.52083
-				key = 0.15008 0.83333	1.04168	  0.00000
-				key = 0.11872 0.80000	0.81381	  1.08506
-				key = 0.08848 0.77500	0.84006	  0.84005
-				key = 0.05920 0.75000	6.75379	  0.86805
-				key = 0.04573 0.65278	7.76113	  7.75451
-				key = 0.03413 0.55556	9.12262	  9.10984
-				key = 0.02440 0.45833  11.06643	 11.03824
-				key = 0.01653 0.36111  14.07522	 13.99902
-				key = 0.01053 0.26389  19.40953	 19.11637
-				key = 0.00640 0.16667  13.12500	 30.03214
-				key = 0.00284 0.11111  20.25463	 19.37500
-				key = 0.00071 0.05556  50.48073	 37.61574
-				key = 0.00000 0.01000	0.00000 139.51675
-			}
 		}
 	}
 
