Mercury Weight adjust

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -6,6 +6,8 @@ PART
 
 	RSSROConfig = true
 
+	//Source for all Mercury Masses: http://www.alternatewars.com/BBOW/Space/JSC-26098_Design_Mass_Properties_II.pdf
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_Capsule
@@ -43,7 +45,9 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = The first American spacecraft. Carrying a single astronaut, it can be launched suborbital on a Redstone or into orbit on Atlas LV3B.
 	attachRules = 1,0,1,1,0
-	mass = 0.6692
+	//2393 lbs dry mass. Subtract 36 lbs parachute struct, 37 lbs Nose Antenna Struct, 27 lbs antenna, 8 lbs antenna misc, 152 lbs RCS, 157 lbs chutes, 308 lbs HS ablator, 79 lbs HS structure, 18 lbs other.
+	mass = 0.71259		//1571 lbs for crew compartment (not perfect, but I don't wanna go even more granular for mass breakdowns
+	//Crew mass 180 lbs, suit mass 30lbs. Add in 1.11?
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -219,7 +223,7 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 127.6
+		volume = 127
 		basemass = -1
 
 		TANK
@@ -231,9 +235,9 @@ PART
 
 		TANK
 		{
-			name = HTP
-			amount = 18
-			maxAmount = 18
+			name = HTP		//55 lbs usable, 5 lbs unusable, 0.5 lbs helium pressurant
+			amount = 17.4
+			maxAmount = 17.4
 		}
 	}
 
@@ -517,4 +521,9 @@ PART
 @PART[ROC-MercuryCM]:FOR[zzzRealismOverhaul]
 {
 	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
+}
+
+@PART[ROC-MercuryCM]:AFTER[RealAntennas]:NEEDS[RealAntennas]
+{
+	@mass -= 0.008
 }
