--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryDecouplerAtlas.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryDecouplerAtlas.cfg
@@ -30,7 +30,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = Interstage for separating the Mercury capsule from an Atlas rocket.
 	attachRules = 1,0,1,1,0
-	mass = 0.318
+	mass = 0.086		//190 lbs
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
