--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
@@ -60,11 +60,18 @@ PART
 		restrictedNode = bottom
 		disableAfterPlaying = true
 	}
+	
+	RESOURCE
+	{
+		name = Ablator		//308 lbs ablator
+		amount = 139
+		maxAmount = 139
+	}
 
 	//use new heat shield tagging system to configure the shield instead
 	heatShieldDiameter = 1.89
 	heatShieldTag = LEO
-	resetHeatShieldAblator = true
+	resetHeatShieldAblator = false
 	resetHeatShieldMass = true
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
