--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
@@ -32,7 +32,8 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = This nose cap for the Mercury capsule includes the drogue chute and the main antenna. It has an attach node for a destabilizing flap. The latter might not accomplish much but its theorized to help self orient a reentering craft and its nice to have.
 	attachRules = 1,0,1,1,0
-	mass = 0.03
+	//Out of mass subtracted from CM, add 37 lbs nose antenna struct, 27 lbs antenna, 8 lbs antenna misc
+	mass = 0.0326		//approx 72 lbs
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
@@ -111,7 +112,7 @@ PART
 	MODULE:NEEDS[RealChute]
 	{
 		name = RealChuteModule
-		caseMass = 0.03
+		caseMass = 0.0315
 		mustGoDown = True
 		spareChutes = 1
 		cutSpeed = 0.5
@@ -214,6 +215,15 @@ PART
 		@name = ModuleRealAntenna
 		referenceGain = 2.0		//Estimated size, can't find any documentation
 	}
+}
+
+@PART[ROC-MercuryNoseCapBDB]:AFTER[RealChute]:NEEDS[RealAntennas|RealChute]
+{
+	@mass -= 0.008		//subtract antenna mass because RA adds antenna mass. Do it after realchute because realchute messes with mass too
+}
+@PART[ROC-MercuryNoseCapBDB]:AFTER[RealAntennas]:NEEDS[RealAntennas|!RealChute]
+{
+	@mass -= 0.008		//Otherwise subtract mass whenever
 }
 
 @PART[ROC-MercuryNoseCapBDB]:AFTER[zzzRealismOverhaul]
