--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
@@ -41,7 +41,8 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = This part contains four way RCS thrusters to help orient the Mercury capsule and the main parachute.
 	attachRules = 1,0,1,1,0
-	mass = 0.17
+	//Out of mass subtracted from CM, add 36 lbs parachute struct, 152 lbs RCS, 157 lbs chutes, 
+	mass = 0.1565		//345 lbs approx, subtract 16.6 kgs added by realchute?
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -114,7 +115,7 @@ PART
 	MODULE:NEEDS[RealChute]
 	{
 		name = RealChuteModule
-		caseMass = 0.07
+		caseMass = 0.1398
 		mustGoDown = True
 		spareChutes = 1
 		cutSpeed = 0.5
