--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
@@ -37,7 +37,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = This metal tub attaches to the bottom of the Mercury heatshield, allowing retro solids to be mounted. Decoupling will release the straps to separate from the capsule for reentry. Note that this is purely a structural unit - no propulsion is included.
 	attachRules = 1,0,1,1,0
-	mass = 0.005
+	mass = 0.02253		//27.98 lbs structure, 2.17 lbs straps, 13.1 lbs circuitry, 2.25 heaters, 4.16 lbs misc
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
