--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
@@ -33,7 +33,8 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = This small airbrake prevents the Mercury from stabilizing in a "nose-first" orientation during reentry. Attach to the offset node on the Mercury Antenna/Drogue Chute unit. Once in orbit, click the brakes action group to extend it for the rest of the mission.
 	attachRules = 1,1,0,0,0
-	mass = 0.01
+	//Out of mass subtracted from CM, add 18 lbs other
+	mass = 0.00816	//approx 18 lbs
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
