--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryLES.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryLES.cfg
@@ -26,7 +26,8 @@ PART
 	manufacturer = Grand Central Rocket Company
 	description = This solid rocket tower is designed to wrench the command pod up and away from a malfunctioning rocket. Use only in case of emergency. WARNING: Staging the LES will also decouple it from the bottom node, in order to dispose of it after launch. Map the engine to the ABORT action group for emergency use.
 	attachRules = 1,0,1,1,0
-	mass = 0.4679
+	//Gross weight 1091.61 lbs. Subtract 293.2 lbs for propellant
+	mass = 0.3622		//weight 798.41 lbs
 	// heatConductivity = 0.04 // 1/3 default
 	dragModelType = default
 	maximum_drag = 0.3
@@ -135,14 +136,14 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = PSPC
-		volume = 64.45
+		volume = 76.4
 		basemass = -1
 
 		TANK
 		{
-			name = PSPC
-			amount = 64.45
-			maxAmount = 64.45
+			name = PSPC		//293.2 lbs propellant
+			amount = 76.4
+			maxAmount = 76.4
 		}
 	}
 
