Fix RCS thruster power and RCS block mass

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2RCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2RCS.cfg
@@ -43,6 +43,11 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
+	mass = 0.011
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.3
+	angularDrag = 2
 	crashTolerance = 8
 	breakingForce = 250
 	breakingTorque = 250
@@ -62,7 +67,7 @@ PART
 		name = ModuleRCSFX
 		stagingEnabled = True
 		thrusterTransformName = rcsTransform
-		thrusterPower = 0.2
+		thrusterPower = 0.445
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = rcs
 		PROPELLANT
