Fix D2 DM antenna--it's a DM (CM) antenna, not the HGA on the SM. It should not be S-band etc.

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
@@ -322,8 +322,11 @@ PART
 	MODULE
 	{
 		name = ModuleRealAntenna
-		referenceGain = 3.0		//Guess based on Block II
-		RFBand = S		//Default to S-band
+		referenceGain = 1.5
+		RFBand = UHF
+		packetInterval = 1
+		packetSize = 1
+		packetResourceCost = 1
 	}
 }
 
