Decrease D2 DM mass to account for Ablator

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
@@ -65,7 +65,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 2.6
+	mass = 2.1 // 3m heatshield = 562.5kg of Ablator
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
