Scale up D2 solar panels by 1.5x to provide more power. Probably still not enough?

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Solar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Solar.cfg
@@ -16,7 +16,7 @@ PART
 	}
 
 	scale = 1
-	rescaleFactor = 1.0
+	rescaleFactor = 1.5
 
 	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0
 
@@ -81,7 +81,7 @@ PART
 	
 	SolarConfig
 	{
-		area = 2.2868
+		area = 5.1453 // base = 2.2868
 		level = 2
 		type = folded
 	}
