Add Missing WaterFall Configs. Formatting Fixes. Add Nathans Fixes.

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Antenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Antenna.cfg
@@ -115,7 +115,7 @@ PART
 	}
 }
 
-@PART[ROC-D2Antenna]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+@PART[ROC-D2Antenna]:BEFORE[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
 	MODULE
