--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
@@ -65,7 +65,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 2.6
+	mass = 2.1
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -149,21 +149,6 @@ PART
 
 	MODULE
 	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = False
-		deflectionLiftCoeff = 1.4
-		liftingSurfaceCurve = CapsuleBottom
-		disableBodyLift = False
-		omnidirectional = False
-		perpendicularOnly = True
-		transformDir = Y
-		transformSign = -1
-		nodeEnabled = True
-		attachNodeName = bottom
-	}
-
-	MODULE
-	{
 		name = ModuleToggleCrossfeed
 		crossfeedStatus = false
 		toggleEditor = true
@@ -189,7 +174,7 @@ PART
 		name = ModuleRCSFX
 		stagingEnabled = True
 		thrusterTransformName = rcsTransform
-		thrusterPower = 0.15
+		thrusterPower = 0.411
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = rcs
 		enableX = false
@@ -337,8 +322,11 @@ PART
 	MODULE
 	{
 		name = ModuleRealAntenna
-		referenceGain = 3.0		//Guess based on Block II
-		RFBand = S		//Default to S-band
+		referenceGain = 1.5
+		RFBand = UHF
+		packetInterval = 1
+		packetSize = 1
+		packetResourceCost = 1
 	}
 }
 
@@ -348,8 +336,8 @@ PART
 
 @PART[ROC-D2CM]:AFTER[zzzRealismOverhaul]
 {
-	%maxTemp = 900
-	%skinMaxTemp = 3600
+	%maxTemp = 973.15
+	%skinMaxTemp = 3673.15
 }
 
 // Specific adjustments after default setup
@@ -364,8 +352,6 @@ PART
 }
 
 //	==================================================
-//	D-2 command module.
-
 //	TAC Life Support compatibility.
 //	==================================================
 
@@ -375,7 +361,7 @@ PART
 
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume += 300
+		@volume -= 80
 
 		TANK
 		{
