--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block1LES.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block1LES.cfg
@@ -78,9 +78,9 @@ PART
 		fxOffset = 0, 0, 0.02
 		EngineType = SolidBooster
 
-		%ullage = False
-		%pressureFed = False
-		%ignitions = 1
+		ullage = False
+		pressureFed = False
+		ignitions = 1
 
 		PROPELLANT
 		{
@@ -133,8 +133,9 @@ PART
 		speed = 1.0
 	}
 
-	@MODULE[ModuleEnginesRF]
+	@MODULE[ModuleEngines*]
 	{
 		%powerEffectName = Solid-Lower
+		!runningEffectName = NULL
 	}
 }
