--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block2LES.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block2LES.cfg
@@ -81,9 +81,9 @@ PART
 		fxOffset = 0, 0, 0.25
 		EngineType = SolidBooster
 
-		%ullage = False
-		%pressureFed = False
-		%ignitions = 1
+		ullage = False
+		pressureFed = False
+		ignitions = 1
 
 		PROPELLANT
 		{
@@ -145,9 +145,9 @@ PART
 		speed = 1.0
 	}
 
-	@MODULE[ModuleEnginesRF]
+	@MODULE[ModuleEngines*]
 	{
 		%powerEffectName = Solid-Lower
+		!runningEffectName = NULL
 	}
 }
-
