--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2ServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2ServiceModule.cfg
@@ -53,10 +53,6 @@ PART
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
 	fuelCrossFeed = true
-	emissiveConstant = 0.6 // not too absorptive for reentry
-	thermalMassModifier = 1.0
-	skinMassPerArea = 4.0
-	radiatorHeadroom = 0.5
 
 	//	============================================================================
 	//	Modules and Resources
@@ -66,7 +62,7 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 10000.0
+		volume = 12000.0
 		basemass = -1
 		TANK
 		{
@@ -127,7 +123,7 @@ PART
 //	Configure RealAntennas
 //	================================================================================
 
-@PART[ROC-D2ServiceModule]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+@PART[ROC-D2ServiceModule]:BEFORE[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
 	MODULE
