--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Solar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Solar.cfg
@@ -16,7 +16,7 @@ PART
 	}
 
 	scale = 1
-	rescaleFactor = 1.0
+	rescaleFactor = 1.5
 
 	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0
 
@@ -78,11 +78,11 @@ PART
 
 	useSolarConfig = true
 	solarUseMass = true
-	
+
 	SolarConfig
 	{
-		area = 2.2868
+		area = 5.1453 // base = 2.2868
 		level = 2
-		type = tracking
+		type = folded
 	}
 }
