--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2ServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2ServiceModule.cfg
@@ -123,7 +123,7 @@ PART
 //	Configure RealAntennas
 //	================================================================================
 
-@PART[ROC-D2ServiceModule]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+@PART[ROC-D2ServiceModule]:BEFORE[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
 	MODULE
