More D-2 tweaks: Lower DM mass further to aim for 2.8t total for DM (+ chute); that is a cool 700kg over (1.333x) the original GE spec, but weight growth that affected Apollo doubtless would have bit here too. Fix MMs to carry Nitrogen for Kerbal EVAs. Hopefully fix Skirt nodes not doing things in symmetry.

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
@@ -65,7 +65,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 2.1 // 3m heatshield = 562.5kg of Ablator
+	mass = 1.75 // 3m heatshield = 562.5kg of Ablator, plus there's a 200kg parachute
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
