--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule1.cfg
@@ -96,13 +96,19 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 1
+		volume = 101
 		basemass = -1
 		TANK
 		{
 			name = ElectricCharge
 			amount = 90000
 			maxAmount = 90000
+		}
+		TANK
+		{
+			name = Nitrogen
+			amount = 15000
+			maxAmount = 15000
 		}
 	}
 }
