Fix Waterfall Rcs Sounds & Effects and Fix Engine Glow Clipping

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
@@ -176,7 +176,7 @@ PART
 		thrusterTransformName = rcsTransform
 		thrusterPower = 0.411
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = rcs
+		runningEffectName = running
 		enableX = false
 		enableY = false
 		enableZ = false
@@ -238,7 +238,7 @@ PART
 
 	EFFECTS
 	{
-		rcs
+		running
 		{
 			AUDIO_MULTI_POOL
 			{
