--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2RCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2RCS.cfg
@@ -69,7 +69,7 @@ PART
 		thrusterTransformName = rcsTransform
 		thrusterPower = 0.445
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = rcs
+		runningEffectName = running
 		PROPELLANT
 		{
 			name = MMH
@@ -93,7 +93,7 @@ PART
 
 	EFFECTS
 	{
-		rcs
+		running
 		{
 			AUDIO_MULTI_POOL
 			{
