--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Skirt2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Skirt2.cfg
@@ -69,7 +69,7 @@ PART
 
 	EFFECTS
 	{
-		rcs
+		running
 		{
 			AUDIO_MULTI_POOL
 			{
@@ -109,7 +109,7 @@ PART
 		thrusterTransformName = rcsTransform
 		thrusterPower = 0.445
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = rcs
+		runningEffectName = running
 		enableX = false
 		enableY = false
 		enableZ = true
