--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Skirt1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Skirt1.cfg
@@ -72,7 +72,7 @@ PART
 
 	EFFECTS
 	{
-		rcs
+		running
 		{
 			AUDIO_MULTI_POOL
 			{
@@ -112,7 +112,7 @@ PART
 		thrusterTransformName = rcsTransform
 		thrusterPower = 0.445
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = rcs
+		runningEffectName = running
 		enableX = false
 		enableY = false
 		enableZ = true
