--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2_Plume_Support.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2_Plume_Support.cfg
@@ -9,9 +9,9 @@
 		template = rowaterfall-rcs-hypergolic-1
 		audio = rcs-jet-1
 		transform = rcsTransform
-		position = 0,-0.125,0
-		rotation = 0,0,180
-		scale = 1.25,1.25,1.25
+		position = 0,-0.01,0
+		rotation = 0, 0, 180
+		scale = 0.9, 1.25, 0.9
 	}
 }
 
@@ -26,6 +26,7 @@
 		rotation = 0,0,0
 		scale = 1,1,1
 		glow = ro-hydrolox-blue
+		glowStretch = 0.5
 	}
 }
 
