[D2] Let's make us survive a lunar reentry, shall we? And have a reasonable AoA doing so.

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
@@ -65,7 +65,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 1.75 // 3m heatshield = 562.5kg of Ablator, plus there's a 200kg parachute
+	mass = 1.75 // Heatshield has 700kg of Ablator, plus there's a 200kg parachute
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -79,11 +79,23 @@ PART
 
 	heatShieldDiameter = 3
 	heatShieldTag = Lunar
-	resetHeatShieldAblator = true
+	resetHeatShieldAblator = false
 	resetHeatShieldMass = false
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
-	skinMassPerArea = 4
+	skinMassPerArea = 10
+	RESOURCE
+	{
+		name = Ablator
+		maxAmount = 700
+		amount = 700
+	}
+	RESOURCE
+	{
+		name = CharredAblator
+		maxAmount = 525
+		amount = 0
+	}
 
 	//	============================================================================
 	//	Modules and Resources
@@ -109,7 +121,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, -0.062
+		DescentModeCoM = 0, 0, -0.2055
 	}
 
 	MODULE
