--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Parachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Parachute.cfg
@@ -53,13 +53,15 @@ PART
 	breakingForce = 250
 	breakingTorque = 250
 	thermalMassModifier = 1.0
-	skinMassPerArea = 4
+	skinMassPerArea = 10
 	bodyLiftMultiplier = 0
 	stagingIcon = PARACHUTES
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
 	buoyancyUseCubeNamed = PACKED
+	
+	heatShieldTag = Lunar
 
 	//	============================================================================
 	//	Animations and Textures
@@ -122,12 +124,12 @@ PART
 			material = Nylon
 			minIsPressure = False
 			minPressure = 0.01
-			preDeployedDiameter = 2
+			preDeployedDiameter = 4
 			preDeploymentSpeed = 2
 			minDeployment = 3660
-			deployedDiameter = 50
+			deployedDiameter = 40
 			deploymentSpeed = 6
-			deploymentAlt = 3350
+			deploymentAlt = 2350
 			cutAlt = -1
 		}
 	}
@@ -145,12 +147,26 @@ PART
 		dragCubeName = DEPLOYED
 		dragModifier = 4
 	}
+	
+	// Heatshield specs handled by RO Heatshield pass
+	RESOURCE
+	{
+		name = Ablator
+		maxAmount = 12
+		amount = 12
+	}
+	RESOURCE
+	{
+		name = CharredAblator
+		maxAmount = 9
+		amount = 0
+	}
 }
 
 @PART[ROC-D2Parachute]:AFTER[zzzRealismOverhaul]
 {
-	@maxTemp = 3600
-	@skinMaxTemp = 3600
+	%maxTemp = 3600
+	%skinMaxTemp = 3600
 }
 
 @PART[ROC-D2Parachute]:AFTER[zzzRealismOverhaul]
@@ -162,7 +178,7 @@ PART
 		@PARACHUTE
 		{
 			@minDeployment = 3660
-			@deploymentAlt = 3350
+			@deploymentAlt = 2350
 		}
 	}
 }
