D2: Fix AJ10-133 not being able to attach to nodes in 4x.

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2AJ10-133.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2AJ10-133.cfg
@@ -20,11 +20,12 @@ PART
 
 	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -1.9834, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top = 0.0, -0.2, 0.0, 0.0, 1.0, 0.0, 1
 
 	CoMOffset = 0.0, -0.25, 0.0
 
 	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-	attachRules = 1,0,1,0,0
+	attachRules = 1,1,1,0,0
 
 	//	============================================================================
 	//	Title, Description, Category, Techs
