--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2AJ10-133.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2AJ10-133.cfg
@@ -20,7 +20,7 @@ PART
 
 	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -1.9834, 0.0, 0.0, -1.0, 0.0, 1
-	node_stack_top = 0.0, -0.2, 0.0, 0.0, 1.0, 0.0, 1
+	node_attach = 0.0, -0.2, 0.0, 0.0, 1.0, 0.0, 0
 
 	CoMOffset = 0.0, -0.25, 0.0
 
