Switch over to the new HS presets, Remove part values that the preset will override anyway

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+.cfg
@@ -50,12 +50,9 @@ PART
 
 	//use new heat shield tagging system to configure the shield instead
 	heatShieldDiameter = 3.91
-	heatShieldTag = LEO
+	heatShieldTag = Gemini
 	resetHeatShieldAblator = True
 	resetHeatShieldMass = True
-	emissiveConstant = 0.6
-	thermalMassModifier = 1.0
-	skinMassPerArea = 4
 }
 
 // Specific adjustments after default setup
