--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHS.cfg
@@ -43,12 +43,9 @@ PART
 
 	//use new heat shield tagging system to configure the shield instead
 	heatShieldDiameter = 3.9
-	heatShieldTag = LEO
+	heatShieldTag = Gemini
 	resetHeatShieldAblator = true
 	resetHeatShieldMass = true
-	emissiveConstant = 0.6
-	thermalMassModifier = 1.0
-	skinMassPerArea = 4
 
 	MODULE
 	{
