--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
@@ -63,10 +63,7 @@ PART
 
 	//use new heat shield tagging system to configure the shield instead
 	heatShieldDiameter = 1.89
-	heatShieldTag = LEO
+	heatShieldTag = Mercury
 	resetHeatShieldAblator = true
 	resetHeatShieldMass = true
-	emissiveConstant = 0.6
-	thermalMassModifier = 1.0
-	skinMassPerArea = 4
 }
