--- a/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
@@ -60,12 +60,9 @@ PART
 	childStageOffset = 1
 
 	heatShieldDiameter = 4.56
-	heatShieldTag = LEO
+	heatShieldTag = Gemini
 	resetHeatShieldAblator = true
 	resetHeatShieldMass = true
-	emissiveConstant = 0.6
-	thermalMassModifier = 1.0
-	skinMassPerArea = 4
 
 	//	============================================================================
 	//	Modules and Resources
