--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -64,12 +64,9 @@ PART
 	fuelCrossFeed = True
 
 	heatShieldDiameter = 2.3
-	heatShieldTag = LEO
+	heatShieldTag = Mercury
 	resetHeatShieldAblator = true
 	resetHeatShieldMass = false
-	emissiveConstant = 0.6
-	thermalMassModifier = 1.0
-	skinMassPerArea = 4
 
 	//	============================================================================
 	//	Modules and Resources
