A few more capsule fixes, and fix D-2 to use EarlyLunar.

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
@@ -65,7 +65,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 1.75 // Heatshield has 700kg of Ablator, plus there's a 200kg parachute
+	mass = 2.135 // Heatshield has 315kg of Ablator, plus there's a 200kg parachute
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -78,24 +78,9 @@ PART
 	childStageOffset = 1
 
 	heatShieldDiameter = 3
-	heatShieldTag = Lunar
-	resetHeatShieldAblator = false
+	heatShieldTag = EarlyLunar
+	resetHeatShieldAblator = true
 	resetHeatShieldMass = false
-	emissiveConstant = 0.6
-	thermalMassModifier = 1.0
-	skinMassPerArea = 10
-	RESOURCE
-	{
-		name = Ablator
-		maxAmount = 700
-		amount = 700
-	}
-	RESOURCE
-	{
-		name = CharredAblator
-		maxAmount = 525
-		amount = 0
-	}
 
 	//	============================================================================
 	//	Modules and Resources
@@ -242,6 +227,22 @@ PART
 			amount = 1010
 			maxAmount = 1010
 		}
+	}
+	
+	MODULE
+	{
+		name = ModuleAblator
+		ablativeResource = Ablator
+		// Base values, will be clobbered by RO
+		lossExp = -7500
+		lossConst = 0.1
+		pyrolysisLossFactor = 6000
+		reentryConductivity = 0.01
+		ablationTempThresh = 500
+		
+		// Use the char though!
+		useChar = True
+		charModuleName = shieldChar
 	}
 
 	//	============================================================================
