--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Parachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Parachute.cfg
@@ -61,7 +61,7 @@ PART
 	childStageOffset = 1
 	buoyancyUseCubeNamed = PACKED
 	
-	heatShieldTag = Lunar
+	heatShieldTag = EarlyLunar
 
 	//	============================================================================
 	//	Animations and Textures
@@ -154,12 +154,6 @@ PART
 		name = Ablator
 		maxAmount = 12
 		amount = 12
-	}
-	RESOURCE
-	{
-		name = CharredAblator
-		maxAmount = 9
-		amount = 0
 	}
 }
 
