--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
@@ -55,7 +55,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 2.325
+	mass = 2.232 // + 225kg ablator
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -65,7 +65,7 @@ PART
 	breakingTorque = 250
 	fuelCrossFeed = True
 
-	heatShieldDiameter = 2.3
+	heatShieldDiameter = 3 // really 2.3, but more use ablator
 	heatShieldTag = Mercury
 	resetHeatShieldAblator = true
 	resetHeatShieldMass = false
