Convert D-2 LES from HTPB to PBAN (it is maybe supposed to be double-base, who knows.)

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block2LES.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block2LES.cfg
@@ -87,7 +87,7 @@ PART
 
 		PROPELLANT
 		{
-			name = HTPB
+			name = PBAN
 			ratio = 1
 			DrawGauge = True
 		}
@@ -103,13 +103,13 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		type = HTPB
+		type = PBAN
 		volume = 420
 		basemass = -1
 
 		TANK
 		{
-			name = HTPB
+			name = PBAN
 			amount = 420
 			maxAmount = 420
 		}
