Waterfall: less obnoxious audio template for the Gemini OAMS engine

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/Waterfall_Support_GeminiBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/Waterfall_Support_GeminiBDB.cfg
@@ -42,6 +42,10 @@
         }
     }
 }
+@PART[ROC-GeminiOAMSBDB]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+{
+    @ROWaterfall { @audio = pressure-fed-1 }
+}
 @PART[ROC-GeminiOAMSRCSBDB]:AFTER[zROWaterfall_99_Finalize]:NEEDS[Waterfall]
 {
     @MODULE[ModuleWaterfallFX]
