Fix Apollo CM and HS thermal stats so it is reenterable again.

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
@@ -120,15 +120,17 @@ PART
 
 	MODULE
 	{
-		name = ModuleAblator
+		name:NEEDS[!DeadlyReentry] = ModuleAblator
+		name:NEEDS[DeadlyReentry] = ModuleHeatShield
 		ablativeResource = Ablator
 		outputResource = CharredAblator
 		outputMult = 0.75
-		lossExp = -40000
-		lossConst = 15000
-		pyrolysisLossFactor = 40000
-		ablationTempThresh = 500
-		reentryConductivity = 0.01
+		lossExp = -25000
+		lossConst = 15
+		pyrolysisLossFactor = 1458330
+		ablationTempThresh = 1250
+		reentryConductivity = 0.001
+		depletedMaxTemp:NEEDS[DeadlyReentry] = 1200
 		infoTemp = 3000
 	}
 	RESOURCE
