--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+.cfg
@@ -53,26 +53,19 @@ PART
 	heatShieldTag = Gemini
 	resetHeatShieldAblator = True
 	resetHeatShieldMass = True
-}
-
-// Specific adjustments after default setup
-@PART[ROC-ApolloHSBlockIII+]:AFTER[RealismOverhaul_HeatShield]
-{
-	@MODULE[ModuleAblator]
+	
+	MODULE
 	{
+		name = ModuleAblator
 		charModuleName = HeatShieldCharAnim
 		charMin = 0
 		charMax = 1
 	}
-}
-
-// Specific adjustments after default setup
-@PART[ROC-ApolloHSBlockIII]:AFTER[RealismOverhaul_HeatShield]
-{
-	@MODULE[ModuleAblator]
+	
+	// Force set drag cube values
+	// stock heatshield has 1.418x the bounds in X and Z, replicating here.
+	DRAG_CUBE
 	{
-		charModuleName = HeatShieldCharAnim
-		charMin = 0
-		charMax = 1
+		cube = Default, 1.8,0.456,0.059, 1.8,0.4557,0.059, 12.56,0.9197,0.0057, 12.56,0.9031,0.0239, 1.8,0.4582,0.059, 1.8,0.4559,0.059, -2.605E-08,-0.2616,9.442E-07, 5.8,0.5232,5.8
 	}
 }
