Add pressurant to engines/RCS and tanks @Capkirk123. Also correct Apollo RCS to use NTO/MMH as it is supposed to, not NTO/AZ50.

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2ServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2ServiceModule.cfg
@@ -82,6 +82,12 @@ PART
 			amount = 280.5
 			maxAmount = 280.5
 		}
+		TANK
+		{
+			name = Helium
+			amount = 5160
+			maxAmount = 5160
+		}
 	}
 }
 
