--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Skirt2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Skirt2.cfg
@@ -126,6 +126,11 @@ PART
 			name = NTO
 			ratio = 0.544
 		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+		}
 		atmosphereCurve
 		{
 			key = 0 260
