--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSMBlockIII+.cfg
@@ -79,7 +79,7 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 2900.0
+		volume = 3000.0
 		basemass = -1
 		TANK
 		{
@@ -98,6 +98,13 @@ PART
 			name = MMH
 			amount = 100
 			maxAmount = 100
+		}
+		TANK
+		{
+			// Guess. This will be a bit over probably, but depends on the new SPS
+			name = Helium
+			amount = 20000
+			maxAmount = 20000
 		}
 		TANK
 		{
