--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloRCS.cfg
@@ -74,16 +74,24 @@ PART
 		thrusterPower = 0.445
 		runningEffectName = running
 		
+		// MR 1.6:1 from ox/fuel masses
 		PROPELLANT
 		{
-			name = Aerozine50
-			ratio = 0.5575
+			name = MMH
+			ratio = 0.5073
 		}
 
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4425
+			ratio = 0.4927
+		}
+
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+			ignoreForIsp = True
 		}
 		
 		atmosphereCurve
