--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiEquipmentSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiEquipmentSection.cfg
@@ -82,6 +82,11 @@ PART
 			name = NTO
 			ratio = 0.446
 		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+		}
 		atmosphereCurve
 		{
 			key = 0 273
@@ -99,7 +104,7 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 2340
+		volume = 2362
 		type = ServiceModule
 		basemass = -1
 		TANK
@@ -125,6 +130,12 @@ PART
 			name = NTO
 			amount = 192.7835
 			maxAmount = 192.7835
+		}
+		TANK
+		{
+			name = Helium
+			amount = 4330
+			maxAmount = 4330
 		}
 		TANK
 		{
