--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiReentryControlSystem.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiReentryControlSystem.cfg
@@ -87,11 +87,16 @@ PART
 			name = NTO
 			ratio = 0.446
 		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+		}
 	}
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 32.62
+		volume = 34.3
 		type = ServiceModule
 		basemass = -1
 		TANK
@@ -105,6 +110,12 @@ PART
 			name = NTO
 			amount = 14.548
 			maxAmount = 14.548
+		}
+		TANK
+		{
+			name = Helium
+			amount = 330
+			maxAmount = 330
 		}
 	}
 //	============================================================================
