--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiWing.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiWing.cfg
@@ -91,6 +91,11 @@ PART
 			name = NTO
 			ratio = 0.446
 		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+		}
 	}
 //	============================================================================
 //	Animations and Textures
@@ -130,7 +135,7 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 48.93
+		volume = 51.5
 		type = ServiceModule
 		basemass = -1
 		TANK
@@ -144,6 +149,12 @@ PART
 			name = NTO
 			amount = 21.822
 			maxAmount = 21.822
+		}
+		TANK
+		{
+			name = Helium
+			amount = 500
+			maxAmount = 500
 		}
 	}
 	MODULE
