--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiEquipmentSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiEquipmentSection.cfg
@@ -147,6 +147,11 @@ PART
 			name = NTO
 			ratio = 0.446
 		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+		}
 		atmosphereCurve
 		{
 			key = 0 273
@@ -157,7 +162,7 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 2340
+		volume = 2362
 		type = ServiceModule
 		basemass = -1
 		TANK
@@ -183,6 +188,12 @@ PART
 			name = NTO
 			amount = 192.7835
 			maxAmount = 192.7835
+		}
+		TANK
+		{
+			name = Helium
+			amount = 4350
+			maxAmount = 4350
 		}
 		TANK
 		{
