--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiOAMS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiOAMS.cfg
@@ -104,6 +104,11 @@ PART
 			name = NTO
 			ratio = 0.446
 		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+		}
 		atmosphereCurve
 		{
 			key = 0 273
@@ -225,6 +230,11 @@ PART
 			{
 				name = NTO
 				ratio = 0.446
+			}
+			PROPELLANT
+			{
+				name = Helium
+				ratio = 10.0
 			}
 
 			atmosphereCurve
