--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiReentryControlSystem.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiReentryControlSystem.cfg
@@ -98,6 +98,11 @@ PART
 			name = NTO
 			ratio = 0.446
 		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+		}
 		atmosphereCurve
 		{
 			key = 0 283
@@ -108,7 +113,7 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 32.62
+		volume = 34.3
 		type = ServiceModule
 		basemass = -1
 		TANK
@@ -122,6 +127,12 @@ PART
 			name = NTO
 			amount = 14.548
 			maxAmount = 14.548
+		}
+		TANK
+		{
+			name = Helium
+			amount = 330
+			maxAmount = 330
 		}
 	}
 	
