--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetrogradeSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetrogradeSection.cfg
@@ -155,6 +155,11 @@ PART
 			name = NTO
 			ratio = 0.446
 		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+		}
 		atmosphereCurve
 		{
 			key = 0 273
@@ -186,6 +191,11 @@ PART
 		{
 			name = NTO
 			ratio = 0.446
+		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
 		}
 		atmosphereCurve
 		{
