--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -118,15 +118,21 @@ PART
 		thrusterPower = 0.445
 		runningEffectName = control
 
+		// MR 1.94:1 (from ox/fuel mass; stated MR is 2.05:1)
 		PROPELLANT
 		{
 			name = Aerozine50
-			ratio = 0.5575
+			ratio = 0.4537
 		}
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4425
+			ratio = 0.5463
+		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
 		}
 		atmosphereCurve
 		{
@@ -228,7 +234,7 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 2336.5
+		volume = 2463.7
 		basemass = -1
 
 		//	Two batteries ~16.6 kWh (28 V @ 296 Ah each).
@@ -243,20 +249,25 @@ PART
 		// LMAE propellant load ~2378 kg (source https://georgetyson.com/files/apollostatistics.pdf)
 		// RCS propellant load ~287 kg (wikipedia)
 
-		// ~1156.1 L Aerozine
 		TANK
 		{
+			// 108.468L RCS + 1016.164L main
 			name = Aerozine50
-			amount = 1156.1
-			maxAmount = 1156.1
+			amount = 1124.6
+			maxAmount = 1124.6
 		}
-
-		// ~1120.4 L NTO
 		TANK
 		{
+			// 130.606 RCS + 1009.2775L main
 			name = NTO
-			amount = 1120.4
-			maxAmount = 1120.4
+			amount = 1139.9
+			maxAmount = 1139.9
+		}
+		TANK
+		{
+			name = Helium
+			amount = 27828.3
+			maxAmount = 27828.3
 		}
 	}
 
