--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiRCS.cfg
@@ -70,6 +70,11 @@ PART
 			name = NTO
 			ratio = 0.446
 		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+		}
 		atmosphereCurve
 		{
 			key = 0 288
