--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiRetrogradeSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiRetrogradeSection.cfg
@@ -149,6 +149,11 @@ PART
 			name = NTO
 			ratio = 0.446
 		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+		}
 		atmosphereCurve
 		{
 			key = 0 273
