--- a/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
@@ -132,6 +132,13 @@ PART
 			ratio = 0.501
 		}
 
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+			ignoreForIsp = true
+		}
+
 		atmosphereCurve
 		{
 			key = 0 320
@@ -154,7 +161,7 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 2000
+		volume = 2400
 		basemass = -1
 
 		//	Batteries 3.5 kWh
@@ -191,6 +198,13 @@ PART
 			name = MON3
 			amount = 875
 			maxAmount = 875
+		}
+
+		TANK
+		{
+			name = Helium
+			amount = 78570
+			maxAmount = 78570
 		}
 	}
 }
