--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -117,6 +117,12 @@ PART
 			name = HTP
 			ratio = 1.0
 		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10
+			ignoreForIsp = true
+		}
 		atmosphereCurve
 		{
 			key = 0 137
@@ -234,6 +240,13 @@ PART
 			name = HTP
 			amount = 18
 			maxAmount = 18
+		}
+
+		TANK
+		{
+			name = Helium
+			amount = 190
+			maxAmount = 190
 		}
 	}
 
