--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
@@ -197,6 +197,12 @@ PART
 			name = HTP
 			ratio = 1.0
 		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 10.0
+			ignoreForIsp = true
+		}
 		atmosphereCurve
 		{
 			key = 0 137
