--- a/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
@@ -142,11 +142,23 @@ PART
 
 	MODULE
 	{
-		name = ModuleRCS
+		name = ModuleRCSFX
 		thrusterTransformName = RCSthruster
+		runningEffectName = running
+		resourceFlowMode = STAGE_PRIORITY_FLOW
 		//MR-104G - 712 newtons
 		thrusterPower = 0.712
-		resourceName = Hydrazine
+		PROPELLANT
+		{
+			name = Hydrazine
+			ratio = 1.0
+		}
+		PROPELLANT
+		{
+			name = Helium
+			ratio = 30.0		//about 30 bar pressure
+			ignoreForIsp = true
+		}
 		atmosphereCurve
 		{
 			key = 0 239
@@ -210,6 +222,12 @@ PART
 			name = Hydrazine
 			amount = 168
 			maxAmount = 168
+		}
+		TANK
+		{
+			name = Helium
+			amount = 5040
+			maxAmount = 5040
 		}
 	}
 	
