--- a/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
@@ -186,6 +186,14 @@ PART
 				DrawGauge = False
 			}
 
+			PROPELLANT
+			{
+				name = Helium
+				ratio = 10.4
+				DrawGauge = False
+				ignoreForIsp = true
+			}
+
 			atmosphereCurve
 			{
 				key = 0 311
@@ -218,7 +226,7 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 9840
+		volume = 10488
 		basemass = -1
 		
 		TANK
@@ -232,6 +240,12 @@ PART
 			name = Nitrogen
 			amount = 23980
 			maxAmount = 23980
+		}
+		TANK
+		{
+			name = Helium
+			amount = 129589
+			maxAmount = 129589
 		}
 		TANK
 		{
