Deprectate deprecated antenna.

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokAntenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokAntenna.cfg
@@ -35,6 +35,8 @@ PART
 	manufacturer = OKB-1
 	description = Designed to communicate in LEO, this antenna is very primitive and simple. Maximum range of 1Mm.
 	tags = vostok, gagarin, soviet, comms, communication, antenna
+	
+	deprecated = True
 
 	bulkheadProfiles = srf
 
