Revise diameter (and mass) of D-2 HGA. Close #97

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Antenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Antenna.cfg
@@ -43,7 +43,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 0.03
+	mass = 0.005
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -121,7 +121,7 @@ PART
 	MODULE
 	{
 		name = ModuleRealAntenna
-		antennaDiameter = 1.8	//Antenna diameter based on combined area of 4 dishes
+		antennaDiameter = 0.6
 		RFBand = S	//Default to S-band
 	}
 }
